--- a/ngapp/src/app/dr-story-viewer/dr-story-viewer/dr-story-viewer.component.html
+++ b/ngapp/src/app/dr-story-viewer/dr-story-viewer/dr-story-viewer.component.html
@@ -5,7 +5,8 @@
 <ng-container *ngIf="story">
     <app-dr-story-builder
     [content]="story"
-    [storyId]="storyId"></app-dr-story-builder>
+    [storyId]="storyId"
+    [startingWordId]="startingWordId"></app-dr-story-builder>
     <!--<iframe
     [srcdoc]="story.innerHTML"
     style="width:100%;height:500px">
