Continued work on sidebar

--- a/ngapp/src/app/dr-story-viewer/dr-story-builder/dr-story-builder.component.html
+++ b/ngapp/src/app/dr-story-viewer/dr-story-builder/dr-story-builder.component.html
@@ -1,7 +1,7 @@
 
 <div class="interactableArea">
     <div class="sideBar">
-        <div>test! test!</div>
+        <div></div>
     </div>
     <div class="mainPage">
 
