story switching functionality implemented in sidebar tooltip

--- a/ngapp/src/app/dr-story-viewer/dr-story-builder/dr-story-builder.component.html
+++ b/ngapp/src/app/dr-story-viewer/dr-story-builder/dr-story-builder.component.html
@@ -1,7 +1,8 @@
 
 <div class="interactableArea">
     <div class="sideBar">
-        <div></div>
+        <!--<div id="sideBarHeading"></div>
+        <div id="sideBarBody"></div>-->
     </div>
     <div class="mainPage">
 
