--- a/ngapp/src/app/dr-story-viewer/dr-story-builder/dr-story-builder.component.scss
+++ b/ngapp/src/app/dr-story-viewer/dr-story-builder/dr-story-builder.component.scss
@@ -76,8 +76,8 @@
 	background:transparent;
 }
 
-.word.currentWord {
-    background-color: var(--scealai-light-green);
+span.currentWord {
+    background-color: var(--scealai-light-green) !important;
     transition: background-color .1s;
 }
 
@@ -221,12 +221,12 @@
     //right: 0;
 }
 
-.tooltipContent {
+.grammarTooltipContent {
     text-align:left;
     margin: 0;
 }
 
-.tooltipContent * {
+.grammarTooltipContent * {
     //text-align:left;
     margin: 0;
 }
@@ -273,17 +273,43 @@
     background-color: var(--scealai-cream);//rgb(250, 250, 250);
     position: sticky;
     top: 0;
+    
+    height: 84vh;
     //height: 100%;
-    //height: 50%;
-    //height: fit-content;
-    height: 80vh;
-    //transition: width .25s, display .25s;
-    //transition: width .25s;
-    //align-items: left;
-    //margin-right: 0;
+    //height: auto;
+    //max-height: 80vh;
+    
+    //display: table;
+    //flex-direction: column;
 
     border-radius: 4px;
     transition: width .25s, visibility .15s;
+    //overflow-y: auto;
+}
+
+#sideBarHeading {
+    font-style: italic;
+    font-weight: bold;
+}
+
+#sideBarBody {
+    //display: none;
+    //visibility: hidden;
+    //width: 0;
+    //background-color: var(--scealai-cream);//rgb(250, 250, 250);
+    //position: sticky;
+    //top: 0;
+    
+    height: 80%;
+    //box-shadow: inset;
+    box-shadow: 0px -25px 15px -15px rgba(0,0,0,0.15) inset,
+                0px 25px 15px -15px rgba(0,0,0,0.15) inset;
+    //height: 100%;
+    //height: auto;
+    //max-height: 80vh;
+    
+    //display: table;
+    //flex-direction: column;
     overflow-y: auto;
 }
 
