story viewer translation tabs added + integrating word freqs

--- a/ngapp/src/app/dr-story-viewer/dr-story-builder/dr-story-builder.component.html
+++ b/ngapp/src/app/dr-story-viewer/dr-story-builder/dr-story-builder.component.html
@@ -1,6 +1,19 @@
 
 <div class="interactableArea">
     <div class="sideBar">
+        <div id="tabContainer">
+            <button class="tab">
+                {{ ts.l.grammatical_info }}
+            </button>
+            <button class="tab">
+                {{ ts.l.dictionary_entry }}
+            </button>
+            <button class="tab">
+                {{ ts.l.sentence_translation }}
+            </button>
+        </div>
+        <div id="sideBarContent">
+        </div>
         <!--<div id="sideBarHeading"></div>
         <div id="sideBarBody"></div>-->
     </div>
